laravel/resources/assets/css/style.css
li {
    display: inline-block;
}

.game-item {
    height: 200px;
    padding: 0px 20px;
}

.content {
    background: blue;
    height: 200px;
}

.row-game-item {
    margin-bottom: 40px;
}

.row-game-item:last-of-type{
    margin-bottom: 0px;
}

.test {
    background: blue;
}

/* quote */

#quote
{
	text-align:center;
	padding-top:10px;
	color:#000;
	font-family:Georgia, "Times New Roman", Times, serif;
	font-size:14px;
	font-style:italic;
	height:34px;
	background-color:#ddd;
}

#quote .name
{
	font-size:10px;
	color:#666;
}

#quote a
{
	font-size:10px;
	color:#666;	
}

